--- a/dummy/client/index.html
+++ b/dummy/client/index.html
@@ -7,7 +7,7 @@
     <script src="client.js"></script>
     <script src="platform.js"></script>
     <script>
-        var debug = true;
+        var debug = false;
         var client = new Client();
         var platform = new Platform();
         window.onload = function () {
