--- a/dummy/client/index.html
+++ b/dummy/client/index.html
@@ -27,6 +27,33 @@
             client.initClient();
         }
     </script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./sticky-footer-navbar.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body></body>
+<body>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">TRUMP</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Spiel, Spaß und Allllll...es</a></li>
+    </ul>
+  </div>
+</nav>
+<div class="container">
+  <h3>Basic Navbar Example</h3>
+  <p>A navigation bar is a navigation header that is placed at the top of the page.</p>
+</div>
+
+<footer class="footer">
+    <div class="container">
+    <p class="text-muted">Currently Playing: Trump - Dafq happend in Sweden?.</p>
+    </div>
+</footer>
+
+
+</body>
 </html>
