--- a/app/chooser/chooser.html
+++ b/app/chooser/chooser.html
@@ -21,11 +21,11 @@
                 <h4>Album</h4>
             </div>
             <div class="list-group eintraege">
-                <div  *ngFor="let artist of list;" >                     
+                <div *ngFor="let artist of list;" >                     
                     <div ngSwitch="{{artist.name}}" >
-                         <div *ngSwitchCase="getArtist()">
-                            <div class="list-group-item" *ngFor="let v of generateArray(artist.albums)">  
-                                {{v.title}} 
+                        <div *ngSwitchCase="getArtist()">
+                            <div class="list-group-item" *ngFor="let album of generateArray(artist.albums);" (click)="setAlbum(album.title)">  
+                                {{album.title}} 
                             </div>   
                          </div>
                     </div>  
@@ -37,8 +37,22 @@
             <div class="panel-heading">
                 <h4>Song</h4>
             </div>
-            <div class="panel-body">
-                 Blah. Blah....                    
+               <div class="list-group eintraege">
+                <div *ngFor="let artist of list;" >                     
+                    <div ngSwitch="{{artist.name}}" >
+                        <div *ngSwitchCase="getArtist()">
+							<div *ngFor="let album of generateArray(artist.albums);">  								
+								<div ngSwitch="{{album.title}}">	
+									<div *ngSwitchCase="getAlbum()">
+										<div class="list-group-item" *ngFor="let song of generateArray(album.songs);">  
+											{{song.title}} 
+										</div> 												 
+									</div>
+                                </div>
+                            </div>                                 
+                        </div>
+                    </div>  
+                </div>
             </div>
         </div>
     </div>
