--- a/app/chooser/chooser.html
+++ b/app/chooser/chooser.html
@@ -1,8 +1,7 @@
-<h1>Add songs to playlist</h1>
-
-<div class="container-fluid">
+<h1 align="center">Add songs to playlist</h1>
 
     <hr />
+<div class="container-fluid">
     <div class="flexbox">
         <div id="artistBox" class="panel panel-default panel-wizard col-lg-3">
             <div class="panel-heading">
@@ -78,5 +77,4 @@
 			</div>           
 		</div>
 	</div>
-
 </div>
