Added stopbutton, moved client from home-module to app-module

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -7,6 +7,9 @@
 		<button class="btn btn-lg btn-primary" (click)="pause()">
 			<span class="glyphicon glyphicon-play"></span>
 		</button>
+        <button class="btn btn-lg btn-primary" (click)="pause()">
+			<span class="glyphicon glyphicon-stop"></span>
+		</button>
 		<button class="btn btn-lg btn-primary" (click)="skip()">
 			<span class="glyphicon glyphicon-step-forward"></span>
 		</button>
