--- a/app/chooser/chooser.html
+++ b/app/chooser/chooser.html
@@ -69,9 +69,9 @@
 			<table class="table table-hover">
 		        <thead>
 		            <tr>
-		                <th>Song</th>
-		                <th>Artist</th>
-		                <th>Album</th>
+		                <th width="33%">Song</th>
+		                <th width="33%">Artist</th>
+		                <th width="33%">Album</th>
 		            </tr>
 		        </thead>
 		        <tbody>
@@ -89,14 +89,6 @@
 		            </tr>		           
 		        </tbody>
 		    </table>
-				<!--<div class="list-group-item" *ngFor="let song of newPlayList;" >
-					<span class="textfield">{{song.title}}</span>
-					<span class="pull-right">
-						<button class="btn btn-xs btn-danger" (click)="removeSongFromPlaylist(song)">
-							<span class="glyphicon glyphicon-minus"></span>
-						</button>
-					</span>	
-				</div>-->
 			</div>           
 		</div>
 	</div>
