--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <base href="/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	<link rel="icon" href="trumpFavicon.png" type="image/png" /> 
+	
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="./sticky-footer-navbar.css">
