--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,6 +1,9 @@
 <h4>Currently Playing</h4>
 
 <div class="jumbotron" align="center">
+		 <img [src]="albumCoverLink" class="img-rounded" alt="albumcover" width="300" height="300">
+		 <br />
+		 <br />
 		<button class="btn btn-lg btn-primary" >
 			<span class="glyphicon glyphicon-step-backward"></span>
 		</button>
