--- a/app/home/home.html
+++ b/app/home/home.html
@@ -7,8 +7,9 @@
 		<button class="btn btn-lg btn-primary" >
 			<span class="glyphicon glyphicon-step-backward"></span>
 		</button>
-		<button class="btn btn-lg btn-primary" (click)="pause()">
-			<span class="glyphicon glyphicon-play"></span>
+		<button class="btn btn-lg btn-primary" (click)="pause()">		
+			<span *ngIf="!isPlaying" class="glyphicon glyphicon-play"></span>
+			<span *ngIf="isPlaying" class="glyphicon glyphicon-pause"></span>
 		</button>
         <button class="btn btn-lg btn-primary" (click)="pause()">
 			<span class="glyphicon glyphicon-stop"></span>
