--- a/frontend/app/home/home.html
+++ b/frontend/app/home/home.html
@@ -3,6 +3,7 @@
 <div class="jumbotron" align="center">
 	<img [src]="albumCoverLink" class="img-rounded" alt="albumcover" width="300" height="300">
 	<br />
+	<p> Currently playing: Linkin Park - Mihihi</p>
 	<br />
 	<button class="btn btn-lg btn-primary" >
 		<span class="glyphicon glyphicon-step-backward"></span>
@@ -17,6 +18,4 @@
 	<button class="btn btn-lg btn-primary" (click)="skip()">
 		<span class="glyphicon glyphicon-step-forward"></span>
 	</button>
-
-	<p>This is a template showcasing the optional theme stylesheet included in Bootstrap. Use it as a starting point to create something more unique by building on or modifying it.</p>
 </div>
