--- a/frontend/app/home/home.html
+++ b/frontend/app/home/home.html
@@ -1,20 +1,17 @@
 <h4>Currently Playing</h4>
 
 <div class="jumbotron" align="center">
-	<img [src]="albumCoverLink" class="img-rounded" alt="albumcover" width="300" height="300">
-	<br />
-	<p> Currently playing: Linkin Park - Mihihi</p>
-	<br />
-	<button class="btn btn-lg btn-primary" (click)="backwardSkip()">
-		<span class="glyphicon glyphicon-step-backward"></span>
-	</button>
-	<button #toggleButton class="btn btn-lg btn-primary" (click)="toggle()">
-		<span class="glyphicon glyphicon-play"></span>
-	</button>
-	<button class="btn btn-lg btn-primary" (click)="toggle()">
-		<span class="glyphicon glyphicon-stop"></span>
-	</button>
-	<button class="btn btn-lg btn-primary" (click)="skip()">
-		<span class="glyphicon glyphicon-step-forward"></span>
-	</button>
+    <img [src]="albumCoverLink" class="img-rounded" alt="albumcover" width="300" height="300">
+    <br/>
+    <p> Currently playing: Linkin Park - Mihihi</p>
+    <br/>
+    <button class="btn btn-lg btn-primary" (click)="backwardSkip()">
+        <span class="glyphicon glyphicon-step-backward"></span>
+    </button>
+    <button class="btn btn-lg btn-primary" (click)="toggle()">
+        <span #toggleButton class="glyphicon glyphicon-play"></span>
+    </button>
+    <button class="btn btn-lg btn-primary" (click)="skip()">
+        <span class="glyphicon glyphicon-step-forward"></span>
+    </button>
 </div>
