--- a/frontend/app/slave/slave.html
+++ b/frontend/app/slave/slave.html
@@ -1,12 +1,11 @@
 <h4>Currently Playing</h4>
 
 <div class="jumbotron" align="center">
-	<img [src]="albumCoverLink" class="img-rounded" alt="albumcover" width="300" height="300">
-	<br />
-	<p> Currently playing: Linkin Park - Mihihi</p>
-	<br />
-	<button class="btn btn-lg btn-primary">
-		<span *ngIf="!isPlaying" class="glyphicon glyphicon-play"></span>
-		<span *ngIf="isPlaying" class="glyphicon glyphicon-stop"></span>
-	</button>
+    <img [src]="albumCoverLink" class="img-rounded" alt="albumcover" width="300" height="300">
+    <br/>
+    <p> Currently playing: Linkin Park - Mihihi</p>
+    <br/>
+    <button class="btn btn-lg btn-primary" (click)="toggle()">
+        <span #toggleButton class="glyphicon glyphicon-play"></span>
+    </button>
 </div>
