--- a/frontend/app/slave/slave.html
+++ b/frontend/app/slave/slave.html
@@ -4,6 +4,7 @@
     <img [src]="albumCoverLink" class="img-rounded" alt="albumcover" width="300" height="300">
     <br/>
     <p> Currently playing: Linkin Park - Mihihi</p>
+    <p>{{currentSong.title}} </p>
     <br/>
     <button class="btn btn-lg btn-primary" (click)="toggle()">
         <span #toggleButton class="glyphicon glyphicon-play"></span>
